--- a/app/src/main/res/layout/fragment_cook_instruction.xml
+++ b/app/src/main/res/layout/fragment_cook_instruction.xml
@@ -1,137 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.CookInstructionFragment">
 
-    <RelativeLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ImageView
-            android:id="@+id/instr_image"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside"
-            android:layout_alignParentTop="true"
-            tools:ignore="ContentDescription" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/instr_name"
+            <TextView
+                android:id="@+id/instr_complexity_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="10dp"
+                android:text="@string/complexity"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <RatingBar
+                android:id="@+id/instr_complexity"
+                style="@style/InstrRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_complexity_text"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:id="@+id/instr_rate_num"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/instr_rate"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@id/instr_rate_num"
+                android:scaleType="fitCenter"
+                android:src="@drawable/like"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/instr_views_num"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/instr_rate_num"
+                android:layout_alignParentEnd="true"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/instr_views"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@id/instr_rate"
+                android:layout_toStartOf="@id/instr_views_num"
+                android:scaleType="fitCenter"
+                android:src="@drawable/eye"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/instr_ingr_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_complexity"
+                android:layout_marginStart="10dp"
+                android:text="@string/ingredients_title"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/instr_ingredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_ingr_title"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/instr_recipe_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_ingredients"
+                android:layout_marginStart="10dp"
+                android:text="@string/recipe_title"
+                android:textColor="@color/black"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/instr_recipe"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/instr_recipe_title"
+                android:layout_marginStart="10dp"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
+
+        <com.google.android.material.appbar.SubtitleCollapsingToolbarLayout
+            android:id="@+id/cook_instruction_toolbar_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/instr_image"
-            android:layout_marginStart="10dp" />
+            android:layout_height="300dp"
+            android:animateLayoutChanges="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:fitsSystemWindows="true"
+            app:titleEnabled="true">
 
-        <TextView
-            android:id="@+id/instr_ingestion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:textStyle="italic"
-            android:layout_below="@+id/instr_name"
-            android:layout_marginStart="10dp" />
+            <ImageView
+                android:id="@+id/instr_image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                tools:ignore="ContentDescription" />
 
-        <TextView
-            android:id="@+id/instr_complexity_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/complexity"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/instr_ingestion"
-            android:layout_marginStart="10dp" />
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/cook_instruction_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:navigationIcon="?attr/homeAsUpIndicator" />
+        </com.google.android.material.appbar.SubtitleCollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <RatingBar
-            android:id="@+id/instr_complexity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/instr_complexity_text"
-            style="@style/InstrRate"/>
-
-        <TextView
-            android:id="@+id/instr_rate_num"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/instr_ingestion" />
-
-        <ImageView
-            android:id="@+id/instr_rate"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/like"
-            android:scaleType="fitCenter"
-            android:layout_toStartOf="@id/instr_rate_num"
-            android:layout_below="@id/instr_ingestion"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/instr_views_num"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/instr_rate_num" />
-
-        <ImageView
-            android:id="@+id/instr_views"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/eye"
-            android:scaleType="fitCenter"
-            android:layout_toStartOf="@id/instr_views_num"
-            android:layout_below="@id/instr_rate"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/instr_ingr_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="30sp"
-            android:textColor="@color/black"
-            android:text="@string/ingredients_title"
-            android:layout_below="@+id/instr_complexity"
-            android:layout_marginStart="10dp" />
-
-        <TextView
-            android:id="@+id/instr_ingredients"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/instr_ingr_title"
-            android:layout_marginStart="10dp" />
-
-        <TextView
-            android:id="@+id/instr_recipe_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/recipe_title"
-            android:textSize="25sp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/instr_ingredients"
-            android:layout_marginStart="10dp"/>
-
-        <TextView
-            android:id="@+id/instr_recipe"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:textColor="@color/black"
-            android:layout_below="@+id/instr_recipe_title"
-            android:layout_marginStart="10dp" />
-
-    </RelativeLayout>
-</ScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
