--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#FF000000</color>
     <color name="gold">#FFFFD700</color>
+    <color name="blue">#FF0000FF</color>
 </resources>
