--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -8,29 +8,36 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar_recipe"
         android:layout_width="match_parent"
-        android:layout_height="56dp" >
+        android:layout_height="56dp">
 
-            <Spinner
-                android:id="@+id/sort_spinner"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:spinnerMode="dropdown"
-                tools:listitem="@layout/sort_spinner_item"
-                android:gravity="center"/>
+        <Spinner
+            android:id="@+id/sort_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:gravity="center"
+            android:spinnerMode="dropdown"
+            tools:listitem="@layout/sort_spinner_item" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recipe_adapter"
-        android:name="com.example.veganapp.RecipeFragment"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/appbar_recipe"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginRight="0dp"
-        tools:context=".fragments.RecipesFragment"
-        tools:listitem="@layout/fragment_recipe" />
+        android:layout_below="@id/appbar_recipe">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recipe_adapter"
+            android:name="com.example.veganapp.RecipeFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/appbar_recipe"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="0dp"
+            tools:context=".fragments.RecipesFragment"
+            tools:listitem="@layout/fragment_recipe" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
