--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="25dp"
-            android:src="@drawable/favourite_recipes"
+            android:src="@drawable/favourite_recipes_inact"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
 
@@ -32,7 +32,7 @@
             android:id="@+id/trash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="30dp"
             android:src="@drawable/trash"
