--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -5,34 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar_recipe"
+
+<com.google.android.material.appbar.AppBarLayout
+    android:id="@+id/appbar_recipe_list"
+    android:layout_width="match_parent"
+    android:layout_height="56dp">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_recipe_list"
         android:layout_width="match_parent"
-        android:layout_height="56dp">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
         <Spinner
             android:id="@+id/sort_spinner"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginStart="10dp"
-            android:gravity="center"
+            android:gravity="center|start"
             android:spinnerMode="dropdown"
             tools:listitem="@layout/sort_spinner_item" />
+    </androidx.appcompat.widget.Toolbar>
 
-    </com.google.android.material.appbar.AppBarLayout>
+    <View
+        android:id="@+id/anchor_dropdown"
+        android:layout_width="match_parent"
+        android:layout_height="0dp" />
+
+</com.google.android.material.appbar.AppBarLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refresh_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/appbar_recipe">
+        android:layout_below="@id/appbar_recipe_list">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recipe_adapter"
             android:name="com.example.veganapp.RecipeFragment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/appbar_recipe"
+            android:layout_below="@+id/toolbar_recipe_list"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="0dp"
             android:layout_marginRight="0dp"
