--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <ListView
-        android:id="@+id/ingredients_adapter"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/ingredients_search_adapter"
         android:name="com.example.veganapp.RecipeFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
