--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -3,15 +3,32 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/hide_dialog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/hide"
+        android:textSize="20sp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textAlignment="textEnd"
+        android:textColor="@color/black"
+        android:background="@color/colorPrimaryDark"
+        android:clickable="true"
+        android:focusable="true" />
+
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_ingredients"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/hide_dialog"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredients_search_adapter"
         android:name="com.example.veganapp.RecipeFragment"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/search_ingredients"
         android:layout_marginLeft="0dp"
