--- a/app/src/main/res/layout/ingredient_dialog_item.xml
+++ b/app/src/main/res/layout/ingredient_dialog_item.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:clickable="true"
+    android:background="@drawable/ingredient_dialog_item_background"
+    tools:ignore="KeyboardInaccessibleWidget">
 
     <TextView
         android:id="@+id/ingredient_name_search"
