--- a/app/src/main/res/layout/fragment_foundedrecipes_list.xml
+++ b/app/src/main/res/layout/fragment_foundedrecipes_list.xml
@@ -12,7 +12,7 @@
         android:layout_height="56dp">
 
             <TextView
-                android:id="@+id/sort_spinner"
+                android:id="@+id/founded_recipes_title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/results"
