--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -16,6 +16,10 @@
         android:icon="@drawable/add"
         android:title="@string/pick_a_recipe"/>
 
+    <item
+        android:id="@+id/navigation_create_menu"
+        android:icon="@drawable/cook_book"
+        android:title="@string/create_menu"/>
     <!--<item-->
     <!--android:id="@+id/navigation_map"-->
     <!--android:icon="@drawable/map"-->
