--- a/app/src/main/res/layout/fragment_ingridient_item.xml
+++ b/app/src/main/res/layout/fragment_ingridient_item.xml
@@ -9,18 +9,18 @@
         android:id="@+id/ingredient_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="@color/black"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"/>
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/remove_ingredient"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/clear"
-        android:layout_centerVertical="true"
         android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/clear"
         tools:ignore="ContentDescription" />
 
 </RelativeLayout>
