--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,8 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragments.MapFragment">
 
-    <com.yandex.mapkit.mapview.MapView
-        android:id="@+id/mapview"
+    <fragment
+        android:id="@+id/map"
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </FrameLayout>
