--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/hide_dialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hide"
-        android:textSize="20sp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:textAlignment="textEnd"
-        android:textColor="@color/black"
         android:background="@color/colorPrimaryDark"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:paddingStart="10dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="5dp"
+        android:text="@string/hide"
+        android:textAlignment="textEnd"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hide_dialog"/>
+        android:layout_below="@id/hide_dialog" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredients_search_adapter"
