--- a/app/src/main/res/layout/recipe_menu_page.xml
+++ b/app/src/main/res/layout/recipe_menu_page.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/dish_image"
@@ -17,17 +18,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/full_recipe_button"
-        tools:text="Name"
-        android:textSize="25sp"
         android:textColor="@color/black"
-        tools:ignore="ContentDescription" />
+        android:textSize="25sp"
+        tools:ignore="ContentDescription"
+        tools:text="Name" />
 
     <Button
         android:id="@+id/full_recipe_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/see_more"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/see_more"
         tools:ignore="ContentDescription" />
 </RelativeLayout>
