--- a/app/src/main/res/menu/options_menu_ingridients_list.xml
+++ b/app/src/main/res/menu/options_menu_ingridients_list.xml
@@ -6,7 +6,13 @@
         android:id="@+id/options_add"
         android:icon="@drawable/add"
         android:title="@string/add_ingredient"
-        app:showAsAction="collapseActionView|always" />
+        app:showAsAction="collapseActionView|ifRoom" />
+
+    <item
+        android:id="@+id/options_ban"
+        android:icon="@drawable/remove"
+        android:title="@string/ban_ingredient"
+        app:showAsAction="collapseActionView|ifRoom" />
 
     <item
         android:id="@+id/options_settings"
