--- a/app/src/main/res/layout/fragment_ingredient_list.xml
+++ b/app/src/main/res/layout/fragment_ingredient_list.xml
@@ -17,20 +17,11 @@
             android:layout_height="match_parent"
             android:background="@color/colorPrimary">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center|start"
-                android:layout_marginStart="10dp"
-                android:gravity="center_vertical"
-                android:text="@string/add_ingredient"
-                android:textSize="20sp" />
-
             <Button
                 android:id="@+id/find_recipes"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center|end"
+                android:layout_gravity="center|start"
                 android:background="@drawable/button_find_background"
                 android:clickable="true"
                 android:enabled="false"
@@ -42,6 +33,15 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
+    <TextView
+        android:id="@+id/hint_text"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/pick_recipe_instruction"
+        android:padding="10dp"
+        android:elevation="5dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredient_list"
