--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp"
             android:src="@drawable/trash"
             tools:ignore="ContentDescription" />
 
@@ -52,14 +52,14 @@
     <RelativeLayout
         android:id="@+id/view_foreground"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="200dp"
         android:background="@color/cards_and_dialogs_color"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/dish_image"
-            android:layout_width="120dp"
-            android:layout_height="120dp" />
+            android:layout_width="150dp"
+            android:layout_height="200dp" />
 
         <TextView
             android:id="@+id/dish_name"
@@ -71,6 +71,28 @@
             android:maxLength="40"
             android:textColor="@color/black"
             android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/ingestion_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@id/dish_image"
+            android:layout_below="@+id/dish_name"
+            android:maxLength="40"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/type_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:layout_toEndOf="@id/dish_image"
+            android:layout_below="@+id/ingestion_name"
+            android:maxLength="40"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
