--- a/app/src/main/res/layout/ingredient_dialog.xml
+++ b/app/src/main/res/layout/ingredient_dialog.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" >
 
     <TextView
         android:id="@+id/hide_dialog"
@@ -24,7 +25,8 @@
         android:id="@+id/search_ingredients"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/hide_dialog" />
+        android:layout_below="@id/hide_dialog"
+        app:queryHint="Find ingredient..." />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredients_search_adapter"
