--- a/app/src/main/res/drawable/ingredient_dialog_item_background.xml
+++ b/app/src/main/res/drawable/ingredient_dialog_item_background.xml
@@ -2,14 +2,14 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:state_enabled="false">
         <shape android:shape="rectangle"  >
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />
+            <stroke android:width="1dip" android:color="#777777" />
+            <gradient android:angle="-90" android:startColor="#AAAAAA" android:endColor="#AAAAAA"  />
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle"  >
-            <stroke android:width="1dip" android:color="#5e7974" />
-            <gradient android:angle="-90" android:startColor="#345953" android:endColor="#689a92"  />
+            <stroke android:width="1dip" android:color="#777777" />
+            <gradient android:angle="-90" android:startColor="#AAAAAA" android:endColor="#AAAAAA"  />
         </shape>
     </item>
     <item android:state_enabled="true">
