--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#B4FF6A</color>
+    <color name="colorPrimaryDark">#74EA00</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="black">#FF000000</color>
-    <color name="gold">#FFFFD700</color>
-    <color name="blue">#FF0000FF</color>
+    <color name="black">#000000</color>
+    <color name="gold">#FFD700</color>
+    <color name="blue">#0000FF</color>
+    <color name="red">#FF0000</color>
 
     <color name="material_light_primary_text">#DE000000</color>
     <color name="material_light_hint_text">#61000000</color>
@@ -13,6 +14,6 @@
     <color name="material_ripple_light">#1F000000</color>
     <color name="divider_color">#1F000000</color>
     <color name="active_icon_color">#8A000000</color>
-    <color name="cards_and_dialogs_color">@android:color/white</color>
+    <color name="white">@android:color/white</color>
     <color name="quantum_grey_600">#757575</color>
 </resources>
